--- a/Custom Templates/NibInitiableView.xctemplate/TemplateInfo.plist
+++ b/Custom Templates/NibInitiableView.xctemplate/TemplateInfo.plist
@@ -19,13 +19,13 @@
 			<key>Required</key>
 			<true/>
 			<key>Name</key>
-			<string>Module Name:</string>
+			<string>View Name:</string>
 			<key>Description</key>
-			<string>The name of the Module</string>
+			<string>The name of the View</string>
 			<key>Type</key>
 			<string>text</string>
 			<key>Default</key>
-			<string>Module Name</string>
+			<string>SomeView</string>
 		</dict>
 	</array>
 </dict>
